# motorcar

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  geometry.cpp  geometry.h  main.cpp  motorcar-compositor.pro  motorcar-compositor.qrc  motorcarcompositor.cpp  motorcarcompositor.h  motorcarsurface.frag  motorcarsurface.vert  motorcarsurfacenode.cpp  motorcarsurfacenode.h  opengldata.cpp  opengldata.h  qopenglwindow.cpp  qopenglwindow.h  scenegraphnode.cpp  scenegraphnode.h  textureblitter.cpp  textureblitter.h
doc/: docconfig  docconfig~
doc/html/: GLSLHelper_8cpp.html  GLSLHelper_8cpp__incl.map  GLSLHelper_8cpp__incl.md5  GLSLHelper_8h.html  GLSLHelper_8h__dep__incl.map  GLSLHelper_8h__dep__incl.md5  GLSLHelper_8h__incl.map  GLSLHelper_8h__incl.md5  GLSLHelper_8h_source.html  README_8md.html  annotated.html  bone_8cpp.html  bone_8cpp__incl.map  bone_8cpp__incl.md5  bone_8h.html  bone_8h__dep__incl.map  bone_8h__dep__incl.md5  bone_8h__incl.map  bone_8h__incl.md5  bone_8h_source.html  bonesensor_8cpp.html  bonesensor_8cpp__incl.map  bonesensor_8cpp__incl.md5  bonesensor_8h.html  bonesensor_8h__dep__incl.map  bonesensor_8h__dep__incl.md5  bonesensor_8h__incl.map  bonesensor_8h__incl.md5  bonesensor_8h_source.html  classBox-members.html  classBox.html  classFoo.html  classFoo__coll__graph.map  classFoo__coll__graph.md5  classFoo__inherit__graph.map  classFoo__inherit__graph.md5  classGlBufferObject-members.html  classGlBufferObject.html  classGlBufferObject__coll__graph.map  classOpenGLData-members.html  (+1222 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_62.js  all_63.js  all_64.js  all_66.js  all_67.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_7.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_76.js  all_77.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+165 more)
doc/latex/: GLSLHelper_8cpp.tex  GLSLHelper_8cpp__incl.md5  GLSLHelper_8h.tex  GLSLHelper_8h__dep__incl.md5  GLSLHelper_8h__incl.md5  README_8md.tex  annotated.tex  bone_8cpp.tex  bone_8cpp__incl.md5  bone_8h.tex  bone_8h__dep__incl.md5  bone_8h__incl.md5  bonesensor_8cpp.tex  bonesensor_8cpp__incl.md5  bonesensor_8h.tex  bonesensor_8h__dep__incl.md5  bonesensor_8h__incl.md5  classBox.tex  classFoo.tex  classFoo__inherit__graph.md5  classGlBufferObject.tex  classGlBufferObject__coll__graph.md5  classOpenGLData.tex  classOpenGLData__coll__graph.md5  classQOpenGLWindow.tex  classQOpenGLWindow__coll__graph.md5  classQOpenGLWindow__inherit__graph.md5  classQtwaylandSurfaceNode.tex  classQtwaylandSurfaceNode__coll__graph.md5  classTextureBlitter.tex  classmotorcar_1_1Bone.tex  classmotorcar_1_1BoneSensor.tex  classmotorcar_1_1BoneSensor__coll__graph.md5  classmotorcar_1_1BoneSensor__inherit__graph.md5  classmotorcar_1_1Bone__inherit__graph.md5  classmotorcar_1_1Compositor.tex  classmotorcar_1_1Compositor__inherit__graph.md5  classmotorcar_1_1DepthCompositedSurfaceNode.tex  classmotorcar_1_1DepthCompositedSurfaceNode__coll__graph.md5  classmotorcar_1_1Display.tex  (+506 more)
motorcar/clients/simple-egl/: Makefile  simple-egl.c  simple-egl.cpp
motorcar/protocol/: Makefile  motorcar.xml
motorcar/src/: compositor.cpp  compositor.h  displayserver.cpp  displayserver.h  geometry.cpp  geometry.h  motorcar.h  shell.cpp  shell.h  windowmanager.cpp  windowmanager.h
motorcar/src/device/: device.h  oculushmd.cpp  oculushmd.h  oculushmdcontroller.cpp  oculushmdcontroller.h  sixensebasenode.cpp  sixensebasenode.h  sixensecontrollernode.cpp  sixensecontrollernode.h  sixensemotionsensingsystem.cpp  sixensemotionsensingsystem.h  softkineticdepthcamera.cpp  softkineticdepthcamera.h
motorcar/src/events/: event.cpp  event.h  events.h  keyboardevent.cpp  keyboardevent.h  mouseevent.cpp  mouseevent.h  sixdofevent.cpp  sixdofevent.h
motorcar/src/gl/: GLSLHelper.h  openglcontext.cpp  openglcontext.h  openglshader.cpp  openglshader.h  viewport.cpp  viewport.h
motorcar/src/scenegraph/: foo.h  ioelement.cpp  scene.h  (+11 more)
qt/src/: defaultdisplaynode.cpp  defaultdisplaynode.h  opengldata.cpp  opengldata.h  qopenglwindow.cpp  qtwaylandmotorcarcompositor.cpp  qtwaylandmotorcarcompositor.h  qtwaylandmotorcaropenglcontext.cpp  qtwaylandmotorcaropenglcontext.h  qtwaylandmotorcarscene.cpp  qtwaylandmotorcarscene.h  qtwaylandmotorcarseat.cpp  qtwaylandmotorcarseat.h  qtwaylandmotorcarsurface.cpp  qtwaylandmotorcarsurface.h  qtwaylandscene.cpp  qtwaylandscene.h  qtwaylandsurfacenode.cpp  qtwaylandsurfacenode.h
scenegraph/: defaultdisplaynode.cpp  defaultdisplaynode.h  displaynode.cpp  displaynode.h  glcameranode.cpp  glcameranode.h  monocularhmdnode.cpp  monocularhmdnode.h  motorcarsurfacenode.cpp  qtwaylandsurfacenode.cpp  qtwaylandsurfacenode.h  scenegraph.h  scenegraphnode.cpp  scenegraphnode.h
src/: main.cpp  opengldata.cpp
src/client/: ClientApplication.cpp  ClientApplication.h  Makefile
src/compositor/: compositor.cpp  compositor.h  displayserver.cpp  displayserver.h  geometry.cpp  geometry.h  motorcar.h  shell.cpp  shell.h  windowmanager.cpp  windowmanager.h
src/device/: device.h  oculushmd.cpp  oculushmd.h  ovr_0_1_3_hmd.cpp  ovr_0_1_3_hmd.h  ovr_0_5_0_1_hmd.cpp  ovr_0_5_0_1_hmd.h  ovrvisionsensor.cpp  ovrvisionsensor.h  sixensebasenode.cpp  sixensebasenode.h  sixensecontrollernode.cpp  sixensecontrollernode.h  sixensemotionsensingsystem.h  softkineticdepthcamera.cpp  softkineticdepthcamera.h
src/protocol/: Makefile
src/qt/: qopenglwindow.h  qtwaylandmotorcarcompositor.h  qtwaylandmotorcaropenglcontext.h  qtwaylandmotorcarseat.cpp  qtwaylandmotorcarseat.h  qtwaylandsurfacenode.cpp
src/scenegraph/: glcameranode.h  scenegraphnode.h
(+166 files in other folders)
